--- a/src/App.css
+++ b/src/App.css
@@ -1,28 +1,27 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
-}
-
 .App-header {
-  background-color: #222;
-  height: 150px;
-  padding: 20px;
-  color: white;
+  margin-top: 200px;
 }
 
 .App-title {
-  font-size: 1.5em;
+  font-size: 70px;
+  margin-bottom: -25px;
 }
 
 .App-intro {
-  font-size: large;
+  font-size: 30px;
+  font-family: 'Cormorant', serif;
 }
 
-@keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
+.App-lower {
+  margin-top: -30px;
+}
+
+.App-contact {
+  font-family: 'Cormorant', serif;
+  font-size: 35px;
+}
+
+a {
+  text-decoration: none;
+  color: #fff;
 }
