--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,19 @@
-body {
-
+html, body{
+	padding: 0;
+	margin: 0;
+	height: 100%;
+	width: 100%;
 	background: #622665;
 	background:-webkit-linear-gradient(left, #622665, #7e3772);
 	background:-o-linear-gradient(left, #622665, #7e3772);
 	background:linear-gradient(to right, #622665, #7e3772);
-	color: #fff;
+	min-width: 500px;
+
+}
+
+body {
+	
+		color: #fff;
 	font-family: 'Philosopher', sans-serif;
 }
 
@@ -12,6 +21,5 @@ body {
 	display: flex;
 	flex-flow: row wrap;
 	justify-content: center;
-	align-content: center;
 	text-align: center;
 }
